--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,17 @@ before_install:
     - docker build -t jakedremann/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true jakedremann/docker-react npm run test
+    - docker run -e CI=true jakedremann/docker-react npm run test
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "docker"
+    env: "Docker-env"
+    bucket_name: "elasticbeanstalk-us-east-2-257702942489"
+    bucket_path: "docker"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
